compiler/test_files/typing/bad/testfile-arrow-4.psc
class S { i32 a; };
i32 foo() {}
i32 main() { foo().a; }
